# package

./: .gitignore  LICENSE  README.md  main.sh  package.sh  pyproject.toml  setup.bak.cfg
.github/workflows/: build_wheels.yml  wheels.yml
examples/: import_src.py
src/package/: core.py
src/package/commands/: cli.py
tests/: test_import.py
